fixed grid overflowing

--- a/public/static/css/session-link.css
+++ b/public/static/css/session-link.css
@@ -1,5 +1,6 @@
 .session-link {
     background-color: rgb(255, 255, 255, 0.12);
+    width: 100%;
     display: grid;
     grid-auto-flow: column;
     grid-column-gap: 1rem;
