--- a/public/static/css/watch-card.css
+++ b/public/static/css/watch-card.css
@@ -1,25 +1,43 @@
-.child-card-info {
+.wrapper {
+    position: relative;
+}
+
+.child {
     display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: max-content;
-    column-gap: 1rem;
+    grid-auto-rows: 1fr 5fr 1fr 1fr 4fr 2fr;
+    row-gap: 5px;
+    /* grid-template-areas: 
+        "trailer providers" 
+        "title" 
+        "rating genres release" 
+        "overview"; */
+    position: absolute;
+    width: 100%;
+    height: 400px;
+    transform: scale(1);
+    /* background-size: cover; */
+    border-radius: 1rem;
+    /* margin-top: .5rem; */
+    padding: 2rem;
+    border: .1rem solid rgb(10, 16, 22);
+    outline: 1px solid transparent;
+    background-clip: content-box;
+    background: linear-gradient(5deg, rgba(0,0,0,1) 8%, rgba(215,35,35,1) 43%, rgba(243,223,223,1) 90%);
+    backface-visibility: hidden;
 }
 
 .child-card-top {
     display: grid;
+    grid-row: 1;
     grid-auto-flow: column;
     justify-content: space-between;
-}
-
-.child-card-top img {
-    border-radius: .5rem;
 }
 
 .child-card-top a {
     text-decoration: none;
     padding: .5rem;
     background-color: grey;
-    border-radius: .5rem;
+    border-radius: 12px;
     background-color: rgba(255, 255, 255, 0.28);
     height: 2em;
 }
@@ -28,12 +46,43 @@
     background-color: rgba(255, 255, 255, 0.48);
 }
 
+.child-card-providers img {
+    padding: 5px;
+    width: 40px;
+    border-radius: 12px;
+    /* display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: max-content;
+    column-gap: 1rem; */
+}
+
 .child-card-title {
+    grid-row: 3;
     align-self: end;
 }
 
+.child-card-title h2 {
+    margin: 0;
+}
+
+.child-card-info {
+    grid-row: 4;
+    display: flex;
+    column-gap: 10px;
+}
+
+.child-card-info img {
+    width: 2vw;
+    /* padding-top: .2rem; */
+}
+
 .child-card-overview {
+    grid-row: 5;
     overflow-y: auto;
+}
+
+.child-card-buttons {
+    grid-row: 6;
 }
 
 .child-card-buttons a {
@@ -55,40 +104,10 @@
     background-color: rgba(255, 255, 255, 0.28);
 }
 
-.wrapper {
-    justify-self: center;
-    width: 100%;
-    position: relative;
-}
-
-.child-wrapper {
-    display: grid;
-    grid-auto-rows: min-content 100px 30px 75px min-content;
-    /* grid-template-areas: 
-        "trailer providers" 
-        "title" 
-        "rating genres release" 
-        "overview"; */
-}
-
-.child {
-    position: absolute;
-    width: 100%;
-    height: 350px;
-    transform: scale(1);
-    /* background-size: cover; */
-    border-radius: 1rem;
-    margin-top: .5rem;
-    padding: 2rem;
-    border: .1rem solid rgb(10, 16, 22);
-    outline: 1px solid transparent;
-    background-clip: border-box;
-    background: linear-gradient(5deg, rgba(0,0,0,1) 8%, rgba(215,35,35,1) 43%, rgba(243,223,223,1) 90%);
-    backface-visibility: hidden;
-}
 
 .child.first {
-    background: linear-gradient(5deg, rgba(0,0,0,1) 8%, rgba(215,35,35,1) 43%, rgba(243,223,223,1) 90%);}
+    background: linear-gradient(5deg, rgba(0,0,0,1) 8%, rgba(215,35,35,1) 43%, rgba(243,223,223,1) 90%);
+}
 
 .child.moving {
     box-shadow: rgba(0, 0, 0, 0.77) 0px 2px 14px 0px;
@@ -134,11 +153,6 @@
 .fas.fa-star {
     color: yellow;
 } 
-
-.child-card-info img {
-    width: 2vw;
-    /* padding-top: .2rem; */
-}
 
 #match {
     user-select: none;
